
2021-07-12  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_getenv_path): drop invalid list from path
	* config.c (cb_load_std): fixed old error passing enum instead of int
	* parser.y: minor adjustments to USE handling
	* pplex.l: drop "spurious $" in col 7 rule, fixing bug #577

2021-07-07  Simon Sobisch <simonsobisch@gnu.org>

	* reserved.c, scanner.l, tree.c. pplex.l: use quotes again for including bison
	  generated headers, fixing bug #721
	* parser.y, reserved.c, scanner.l, tree.c: work around bad Windows SDK header
	* pplex.l: fixed rule that could prevent PROCESS/CBL to work as intended

2021-07-06  Ron Norman <rjn@inglenet.com>

	* tree.h: Add cb_field  flag_binary_assign  indicates simple assign 
	* field.c: If field is effectively a machine 'int' set flag_binary_assign
	* codegen.c: Only use cob_set_llcon is not flag_binary_assign
	* typeck.c: If assigning a value to an 'int' field and value fits
	          then try to emit simple assignment statement

2021-06-28  Ron Norman <rjn@inglenet.com>

	* cobc.c: Accept -fdatamap and then report field 'offset' 
	          instead of 'TYPE'
	* parser.y (evaluate_body): don't call cb_emit_evaluate if contained
	  statements are skipped (not active USE FOR DEBUGGING), fixing bug #693
	* parser.y: dropped "main_statement" and deactivated unnecessary calls to
	  begin_implicit_statement

2021-06-26  Ron Norman <rjn@inglenet.com>

	* cobc.h: Add extern cb_dialect
	* cobc.c: Set cb_dialect to -std= value
	* codegen.c: Emit setting of module compile dialect

2021-05-28  Ron Norman <rjn@inglenet.com>
	* tree.c: Allow PIC clause not handled by precendence table
	          Count decimals in $.$$ style PICTURE
	* typeck.c: Format numeric value for display in error message

2021-05-27  Simon Sobisch <simonsobisch@gnu.org>

	* help.c: use double-dash for long options

2021-05-14  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c (finalize_file): allow use of GLOBAL record-key-names
	  in nested programs
